# python-project-template

./: .gitignore  .pre-commit-config.yaml  .safety-policy.yml  Changelog.md  Dockerfile  Makefile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml  ruff.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
local_log_server/: Dockerfile-log-server  log_server.py
requirements/: dev.txt
src/: config_settings.py  logger.py  test_logger.py
src/configuration/: config_settings.py  config_test.py
src/test/: conftest.py  test_1.py  test_toy.py
