[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["ZequnZ <zequn.zhou007@gmail.com>"]
readme = "README.md"
#packages = [{include = "python_project_template"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
ruff = "^0.5.4"
pytest = "^8.3.1"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# mypy global options:
# See https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
]
#ignore_missing_imports = true

# pytest config
[tool.pytest.ini_options]
# Set the root folder here
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "test_mark: mark test for testing purposes (deselect with '-m \"not test_mark\"')"
]

[config.default]
var2 = 1
var1= "default-var1"

[config.local]
var1= "local-var1"
var2 = 10
