[project]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = [
    {name = "ZequnZ", email = "zequn.zhou007@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic~=2.9.0",
    "pydantic-settings~=2.10.0"
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "mypy>=1.4.1",
    "ruff>=0.12.0",
    "pytest>=8.3.1",
    "pytest-cov>=4.1.0",
    "pre-commit>=4.3.0",
    "safety>=3.2.11"
]

# mypy global options:
# See https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
]
#ignore_missing_imports = true

# pytest config
[tool.pytest.ini_options]
# Set the root folder here
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "test_mark: mark test for testing purposes (deselect with '-m \"not test_mark\"')"
]

[config.default]
var2 = 1
var1= "default-var1"

[config.local]
var1= "local-var1"
var2 = 10
